# pixelfuse-backend

./: .env.example  .gitignore  Darks.txt  Dockerfile  EMBED.txt  README.md  base-app.py  decoderCheck.txt  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: 001_overview.md  002_api.md  003_configuration.md  004_development.md  005_deployment.md
src/pixelfuse/: cli.py  config.py  main.py
src/pixelfuse/api/routes/: convert.py  extract.py
tests/: conftest.py  test_convert.py  test_extract.py
