[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixelfuse"
version = "1.0.0"
description = "Embed images into portable text files and extract them back"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "Pillow>=10.0.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.11",
]

[project.scripts]
pixelfuse = "pixelfuse.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelfuse"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
