[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelfuse"
version = "1.0.0"
description = "Embed images into portable text files and extract them back"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "Pillow>=10.0.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "flake8>=7.0",
    "mypy>=1.11",
    "tox>=4.0",
]

[project.scripts]
pixelfuse = "pixelfuse.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = lint, typecheck, test
isolated_build = true

[testenv:lint]
deps = flake8>=7.0
commands = flake8 src tests

[testenv:typecheck]
deps = mypy>=1.11
commands = mypy src

[testenv:test]
extras = dev
commands = pytest --tb=short -q
"""
